# Hima-Bot-source-code

./: important.py  lvlup.py  main.py  mfx2_math.py  prawls.py  prefixes.json  pyproject.toml  readme.md  replit  requirements.txt  runs.json  webserver.py
Others/: Bio.py  CO.py  IMG.py  Jokes.py  Numbers.py  Quotes.py  color_finder.py  gender.py  words.py
cogs/: Automod.py  ErrorHandler.py  Events.py  Fun.py  Giveaway.py  Help.py  Image.py  Math.py  Misc.py  Moderation.py  Music.py  Poll.py  Reddit.py  Snipe.py  Utility.py  games.py  roles.py
