[tool.poetry]
name = "codingonline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pyfiglet = "^0.8.post1"
praw = "^7.1.0"
flask = "^1.1.2"
youtube-dl = "^2020.12.14"
slugify = "^0.0.1"
flatten-json = "^0.1.8"
utils = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
